// Copyright 2024 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.reporting.postprocessing.v2alpha;

option java_package = "org.wfanet.measurement.reporting.postprocessing.v2alpha";
option java_multiple_files = true;
option java_outer_classname = "ReportSetProto";

message ReportingSet {
  string anchor = 1;
  string campaign_id = 2;
  string channels = 3;
  string incrementality_type = 4;
  repeated string lhs_reporting_set_ids = 5;
  repeated string measured_entity = 6;
  repeated string measurement_entities = 7;
  string measurement_policy = 8;
  string measurement_policy_incrementality = 9;
  string media_type = 10;
  string position_in_incrementality = 11;
  string primitive_egroup_id = 12;
  repeated string rhs_reporting_set_ids = 13;
  repeated string set_operation = 14;
  repeated string target = 15;
  string unique_reach_target = 16;
  string version = 17;
  string video_completion = 18;
  string viewability = 19;
}
